--- a/V_html/Volleyball_index.html
+++ b/V_html/Volleyball_index.html
@@ -38,7 +38,7 @@
                   <li class="dropdown">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">RULE<span class="caret"></span></a>
                     <ul class="dropdown-menu" role="menu">
-                      <li><a href="">Outline</a></li>
+                      <li><a href="../V_html/V_Rule_Outline.html">Outline</a></li>
                       <li><a href="">Rotation</a></li>
                       <li><a href="">Goal</a></li>
                       <li><a href="">Foul</a></li>
