Update rules[2], Add Goal and Foul

--- a/V_html/V_Rule_Goal.html
+++ b/V_html/V_Rule_Goal.html
@@ -11,7 +11,7 @@
 
     <link rel="stylesheet" href="../V_css/V_index.css">
     <link rel="stylesheet" href="../V_css/V_Rule_Outline.css">
-    <link rel="stylesheet" href="../V_css/V_Rule_Rotation.css">
+    <link rel="stylesheet" href="../V_css/V_Rule_Goal.css">
     <title>IN.Volleyball</title>
     <link rel="shortcut icon" type="image⁄x-icon" href="../V_imges/Volleyball_icon.png">
 
@@ -55,8 +55,8 @@
         <div id="sidebar">
           <ul>
             <li><a href="../V_html/V_Rule_Outline.html">Outline</a></li>
-            <li><a class="active" href="../V_html/V_Rule_Rotation.html">Rotation</a></li>
-            <li><a href="../V_html/V_Rule_Goal.html">Goal</a></li>
+            <li><a href="../V_html/V_Rule_Rotation.html">Rotation</a></li>
+            <li><a class="active" href="../V_html/V_Rule_Goal.html">Goal</a></li>
             <li><a href="../V_html/V_Rule_Foul.html">Foul</a></li>
           </ul>
       
@@ -66,18 +66,9 @@
             <div class="panel panel-default bakcol">
                 <div class="panel-body" id="Rule_outline_main">
                   <div id="Outline_block1">
-                    <h1>Rotation</h1>
-                    <img src="../V_imges/로테이션.png" id="rotation_img">
-                    <p>서브 리시브를 받는 팀이 득점해 서브권을 얻게되면 득점한 팀만 시계 방향으로 한칸 씩 옮기는 것입니다. 즉 우리편이 서브를 넣는 차례에서 득점을 하게 됐을시에는 로테이션을 돌리지 않습니다. 
-                        <br><br>어택 라인과 네트 사이에 3명이 있는 자리를 전위, 어택 라인과 엔드 라인 사이에 3명이 있는 자리를 후위라고 한다. 후위 선수는 전위 선수에게는 적용되지 않는 제약이 있는데, 바로 전위에서 공격을 할 수는 있으나 블로킹을 시도할 수 없으며 전위에 있을 때 네트 위쪽 끝보다 높이 올라가 있는 공을 건드리면 반칙이라는 것. 따라서 후위 선수가 백어택 중 어택 라인을 밟게 되면 공의 위치상 건드릴 수 없는 공을 건드린 셈이니 반칙이 되어 상대편이 점수를 얻는다.
-                        <br><br>
-                        일반적으로 로테이션을 물릴 때는 센터 1명이 항상 전위에 있고, 레프트 1명이 항상 후위에 있도록 센터와 레프트끼리는 대각편성을 하며, 라이트와 세터를 대각 편성한다. 이때 어떤 레프트를 센터 혹은 세터와 물리게 하느냐는 자기팀의 서브 어택 사정이나 상대팀 공격에 대응하는 수비 포메이션에 따라 조율한다. 특히 양팀의 주공격수가 전위에 있을 때 스파이크와 블록을 통해 싸움을 붙이기도 하는데, 이때 각 세트별로 선수의 컨디션에 따라 선수들의 로테이션을 한 칸씩 이동할 수 있다.
-                    </p>
-                    <div id="small_fault"> 
-                        <b>※position fault</b>
-                        <br>포지션 폴트는 로테이션에 따른 선수 위치를 어겼을 때 생기는 범실로 배구 경기에서 서브를 할 때, 전위는 후위보다 네트 쪽에, 또 레프트는 라이트의 좌측에, 센터는 레프트와 라이트의 중간에 위치에 있어야 한다. 이 규정을 어기면 반칙이 선언된다.
-                    </div>
-                  </div>   
+                    <h1>Goal</h1>
+                    <p>기본적으로 3번 이내의 터치(한사람의 연속터치 제외)로 상대방 진영 바닥에 공을 떨어뜨리면 된다. <br>진영 밖으로 떨어지거나 공이 안테나에 닿으면 그 공을 가장 마지막으로 건드린 팀이 실점. <br>따라서 최대한 강하고 빠르게 상대방 진영에 공을 떨구거나, 상대방 손에 맞추고 진영 밖으로 아웃시키는 공격을 하게 된다. </p>
+                  </div>  
                 </div>
             </div>
         </main>
