--- a/V_html/V_Rule_Outline.html
+++ b/V_html/V_Rule_Outline.html
@@ -38,15 +38,12 @@
                       <ul class="dropdown-menu" role="menu">
                         <li><a href="../V_html/V_Rule_Outline.html">Outline</a></li>
                         <li><a href="../V_html/V_Rule_Rotation.html">Rotation</a></li>
-                        <li><a href="">Goal</a></li>
-                        <li><a href="">Foul</a></li>
+                        <li><a href="../V_html/V_Rule_Goal.html">Goal</a></li>
+                        <li><a href="../V_html/V_Rule_Foul.html">Foul</a></li>
                       </ul>
                     </li>
                     <li><a href="">POSITION</a></li>
                     <li><a href="">TECHNIQUE</a></li>
-                    <li><a href="">COMPETITION</a></li>
-                    <li><a href="">VIDEO</a></li>
-                    <li><a href="">NEWS</a></li>
                   </ul>
                 </div><!-- /.navbar-collapse -->
                 </div><!-- /container-->
@@ -58,8 +55,8 @@
           <ul>
             <li><a class="active" href="../V_html/V_Rule_Outline.html">Outline</a></li>
             <li><a href="../V_html/V_Rule_Rotation.html">Rotation</a></li>
-            <li><a href="#">Goal</a></li>
-            <li><a href="#">Foul</a></li>
+            <li><a href="../V_html/V_Rule_Goal.html">Goal</a></li>
+            <li><a href="../V_html/V_Rule_Foul.html">Foul</a></li>
           </ul>
       
 
@@ -143,9 +140,7 @@
                 <a class="btn btn-danger" href="" role="button">RULE</a>
                 <a class="btn btn-danger" href="" role="button">POSITION</a>
                 <a class="btn btn-danger" href="" role="button">TECHNIQUE</a>
-                <a class="btn btn-danger" href="" role="button">COMPETITION</a>
-                <a class="btn btn-danger" href="" role="button">VIDEO</a>
-                <a class="btn btn-danger" href="" role="button">NEWS</a>
+
               </div>
             </div>
           </div>
