--- a/V_html/Volleyball_index.html
+++ b/V_html/Volleyball_index.html
@@ -39,16 +39,14 @@
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">RULE<span class="caret"></span></a>
                     <ul class="dropdown-menu" role="menu">
                       <li><a href="../V_html/V_Rule_Outline.html">Outline</a></li>
-                      <li><a href="">Rotation</a></li>
-                      <li><a href="">Goal</a></li>
-                      <li><a href="">Foul</a></li>
+                      <li><a href="../V_html/V_Rule_Rotation.html">Rotation</a></li>
+                      <li><a href="../V_html/V_Rule_Goal.html">Goal</a></li>
+                      <li><a href="../V_html/V_Rule_Foul.html">Foul</a></li>
                     </ul>
                   </li>
                   <li><a href="">POSITION</a></li>
                   <li><a href="">TECHNIQUE</a></li>
-                  <li><a href="">COMPETITION</a></li>
-                  <li><a href="">VIDEO</a></li>
-                  <li><a href="">NEWS</a></li>
+
                 </ul>
               </div><!-- /.navbar-collapse -->
               </div><!-- /container-->
@@ -173,12 +171,10 @@
             <div class="panel panel-default" id="bottom_web">
               <div class="panel-body" id="bottom_body">
                 <a class="btn btn-danger" href="../V_html/Volleyball_index.html" role="button">HOME</a>
-                <a class="btn btn-danger" href="" role="button">RULE</a>
+                <a class="btn btn-danger" href="../V_html/V_Rule_Outline.html" role="button">RULE</a>
                 <a class="btn btn-danger" href="" role="button">POSITION</a>
                 <a class="btn btn-danger" href="" role="button">TECHNIQUE</a>
-                <a class="btn btn-danger" href="" role="button">COMPETITION</a>
-                <a class="btn btn-danger" href="" role="button">VIDEO</a>
-                <a class="btn btn-danger" href="" role="button">NEWS</a>
+
               </div>
             </div>
           </div>
