--- a/V_html/V_Rule_Foul.html
+++ b/V_html/V_Rule_Foul.html
@@ -11,7 +11,7 @@
 
     <link rel="stylesheet" href="../V_css/V_index.css">
     <link rel="stylesheet" href="../V_css/V_Rule_Outline.css">
-    <link rel="stylesheet" href="../V_css/V_Rule_Rotation.css">
+    <link rel="stylesheet" href="../V_css/V_Rule_Foul.css">
     <title>IN.Volleyball</title>
     <link rel="shortcut icon" type="image⁄x-icon" href="../V_imges/Volleyball_icon.png">
 
@@ -55,9 +55,9 @@
         <div id="sidebar">
           <ul>
             <li><a href="../V_html/V_Rule_Outline.html">Outline</a></li>
-            <li><a class="active" href="../V_html/V_Rule_Rotation.html">Rotation</a></li>
+            <li><a href="../V_html/V_Rule_Rotation.html">Rotation</a></li>
             <li><a href="../V_html/V_Rule_Goal.html">Goal</a></li>
-            <li><a href="../V_html/V_Rule_Foul.html">Foul</a></li>
+            <li><a class="active" href="../V_html/V_Rule_Foul.html">Foul</a></li>
           </ul>
       
 
@@ -66,18 +66,29 @@
             <div class="panel panel-default bakcol">
                 <div class="panel-body" id="Rule_outline_main">
                   <div id="Outline_block1">
-                    <h1>Rotation</h1>
-                    <img src="../V_imges/로테이션.png" id="rotation_img">
-                    <p>서브 리시브를 받는 팀이 득점해 서브권을 얻게되면 득점한 팀만 시계 방향으로 한칸 씩 옮기는 것입니다. 즉 우리편이 서브를 넣는 차례에서 득점을 하게 됐을시에는 로테이션을 돌리지 않습니다. 
-                        <br><br>어택 라인과 네트 사이에 3명이 있는 자리를 전위, 어택 라인과 엔드 라인 사이에 3명이 있는 자리를 후위라고 한다. 후위 선수는 전위 선수에게는 적용되지 않는 제약이 있는데, 바로 전위에서 공격을 할 수는 있으나 블로킹을 시도할 수 없으며 전위에 있을 때 네트 위쪽 끝보다 높이 올라가 있는 공을 건드리면 반칙이라는 것. 따라서 후위 선수가 백어택 중 어택 라인을 밟게 되면 공의 위치상 건드릴 수 없는 공을 건드린 셈이니 반칙이 되어 상대편이 점수를 얻는다.
-                        <br><br>
-                        일반적으로 로테이션을 물릴 때는 센터 1명이 항상 전위에 있고, 레프트 1명이 항상 후위에 있도록 센터와 레프트끼리는 대각편성을 하며, 라이트와 세터를 대각 편성한다. 이때 어떤 레프트를 센터 혹은 세터와 물리게 하느냐는 자기팀의 서브 어택 사정이나 상대팀 공격에 대응하는 수비 포메이션에 따라 조율한다. 특히 양팀의 주공격수가 전위에 있을 때 스파이크와 블록을 통해 싸움을 붙이기도 하는데, 이때 각 세트별로 선수의 컨디션에 따라 선수들의 로테이션을 한 칸씩 이동할 수 있다.
-                    </p>
-                    <div id="small_fault"> 
-                        <b>※position fault</b>
-                        <br>포지션 폴트는 로테이션에 따른 선수 위치를 어겼을 때 생기는 범실로 배구 경기에서 서브를 할 때, 전위는 후위보다 네트 쪽에, 또 레프트는 라이트의 좌측에, 센터는 레프트와 라이트의 중간에 위치에 있어야 한다. 이 규정을 어기면 반칙이 선언된다.
-                    </div>
-                  </div>   
+                    <h1>Foul</h1>
+                    <ul>
+                        <li><b>터치 네트</b> : 플레이 도중에 선수의 몸이나 의복 등이 네트에 닿는 경우</li>
+                        <li><b>드리블</b> : 블로커와 상대편으로부터 넘어온 제1구째의 볼을 동일한 동작 안에서 2회 닿는 경우를 제외하고, 1명의 선수가 2회 계속해서 볼에 닿는 경우</li>
+                        <li><b>오버 타임</b> : 3회 이내의 패스 또는 스파이크로 상대 코트에 볼을 넣어야 하는데, 그 횟수 이상 볼과 닿는 경우. 단, 블로킹으로 생긴 최초 접촉은 포함하지 않는다.</li>
+                        <li><b>홀딩</b> : 볼을 잡고 있거나 안고 있거나 하는 경우</li>
+                        <li><b>오버 네트</b> : 블로킹 외에 네트 위로 손이 넘어와서 상대편 코트에 있는 볼과 닿는 모든 경우 패싱 더 센터라인 : 플레이 중에 센터라인을 벗어나는 경우</li>
+                        <li><b>페니트레이션 폴트</b> : 서브 때 선수가 로테이션에 따라 정해진 위치에 있지 않거나, 랠리 중에 후위 선수가 어택라인을 넘어 네트 위에서 공격한 경우</li>
+                        <li><b>주의와 경고, 퇴장</b> : 선수나 코칭 스태프의 무례한 행위나 공격적인 행위, 혹은 폭력적 행동 등을 할 경우, 주심은 심각성에 따라 다음 다섯 가지 중 한 가지를 골라 주의를 줄 수 있다.<br>
+                            <table>
+                                <tr>
+                                    <td><b>경고</b> : 제재없음 - 단계 1: 구두경고</td>
+                                    <td><b>단계 2</b> : 노란카드 표시</td>
+                                    <td><b>벌칙</b> : 제재 - 빨간카드 표시 (상대에게 1점과 서비스권 부여)</td>
+                                </tr>
+                                <tr>
+                                    <td><b>퇴장</b> : 제재 - 빨간카드 + 노란카드를 동시에 표시</td>
+                                    <td><b>자격상실</b> : 제재 - 빨간카드와 노란카드를 분리해서 표시</td>
+                                </tr>
+                            </table>    
+                        </li>
+                    </ul>
+                  </div>  
                 </div>
             </div>
         </main>
@@ -91,7 +102,6 @@
                 <a class="btn btn-danger" href="../V_html/V_Rule_Outline.html" role="button">RULE</a>
                 <a class="btn btn-danger" href="" role="button">POSITION</a>
                 <a class="btn btn-danger" href="" role="button">TECHNIQUE</a>
-
               </div>
             </div>
           </div>
