Total Updates, Add technique

--- a/V_html/V_Rule_Foul.html
+++ b/V_html/V_Rule_Foul.html
@@ -43,8 +43,8 @@
                         <li><a href="../V_html/V_Rule_Foul.html">Foul</a></li>
                       </ul>
                     </li>
-                    <li><a href="">POSITION</a></li>
-                    <li><a href="">TECHNIQUE</a></li>
+                    <li><a href="../V_html/V_Position.html">POSITION</a></li>
+                    <li><a href="../V_html/V_technique.html">TECHNIQUE</a></li>
                   </ul>
                 </div><!-- /.navbar-collapse -->
                 </div><!-- /container-->
@@ -100,8 +100,8 @@
               <div class="panel-body" id="bottom_body">
                 <a class="btn btn-danger" href="../V_html/Volleyball_index.html" role="button">HOME</a>
                 <a class="btn btn-danger" href="../V_html/V_Rule_Outline.html" role="button">RULE</a>
-                <a class="btn btn-danger" href="" role="button">POSITION</a>
-                <a class="btn btn-danger" href="" role="button">TECHNIQUE</a>
+                <a class="btn btn-danger" href="../V_html/V_Position.html" role="button">POSITION</a>
+                <a class="btn btn-danger" href="../V_html/V_technique.html" role="button">TECHNIQUE</a>
               </div>
             </div>
           </div>
