--- a/V_html/Volleyball_index.html
+++ b/V_html/Volleyball_index.html
@@ -44,8 +44,8 @@
                       <li><a href="../V_html/V_Rule_Foul.html">Foul</a></li>
                     </ul>
                   </li>
-                  <li><a href="">POSITION</a></li>
-                  <li><a href="">TECHNIQUE</a></li>
+                  <li><a href="../V_html/V_Position.html">POSITION</a></li>
+                  <li><a href="../V_html/V_technique.html">TECHNIQUE</a></li>
 
                 </ul>
               </div><!-- /.navbar-collapse -->
@@ -155,10 +155,10 @@
             
                     <div class="tab-content" id="V_Tab_block">
                       <div class="tab-pane active" id="V_Tab_events">
-                        <iframe class="mar3 fra1 fra" src="https://www.youtube.com/embed/YxjlmVTZmb4" frameborder="0" allowfullscreen></iframe>
+                        <iframe class="mar3 fra1 fra" src="" frameborder="0" allowfullscreen></iframe>
                       </div>
                       <div class="tab-pane" id="V_Tab_Broadcasting">
-                        <iframe class="mar3 fra1 fra" src="https://www.youtube.com/embed/3wa42bsR9js" frameborder="0" allowfullscreen></iframe>
+                        <iframe class="mar3 fra1 fra" src="" frameborder="0" allowfullscreen></iframe>
                       </div>
                     </div><!--/tab-content-->
                   </div>
@@ -172,8 +172,8 @@
               <div class="panel-body" id="bottom_body">
                 <a class="btn btn-danger" href="../V_html/Volleyball_index.html" role="button">HOME</a>
                 <a class="btn btn-danger" href="../V_html/V_Rule_Outline.html" role="button">RULE</a>
-                <a class="btn btn-danger" href="" role="button">POSITION</a>
-                <a class="btn btn-danger" href="" role="button">TECHNIQUE</a>
+                <a class="btn btn-danger" href="../V_html/V_Position.html" role="button">POSITION</a>
+                <a class="btn btn-danger" href="../V_html/V_technique.html" role="button">TECHNIQUE</a>
 
               </div>
             </div>
