--- a/V_html/V_Position.html
+++ b/V_html/V_Position.html
@@ -64,7 +64,7 @@
 
 
         <div id="position_block">
-            <img src="../V_imges/레프트.png" alt="http://blog.naver.com/starsports2017/221096685771" data-scroll="toggle(.fromLeftIn, .fromLeftOut)">
+            <img src="../V_imges/Left.png" alt="http://blog.naver.com/starsports2017/221096685771" data-scroll="toggle(.fromLeftIn, .fromLeftOut)">
             <div id="left_block" data-scroll="toggle(.fromRightIn, .fromRightOut)">
               <h2>Left side hitter</h2>
               <p>왼쪽 공격을 담당하는 선수. 두 명의 선수가 돌아가며 전위 후위를 맡고 보통 2번째 옵션의 공격 루트가 됩니다.전위 레프트는 라이트와 함께 가장 공격적 능력이
@@ -77,11 +77,11 @@
               <h2>Right side hitter</h2>
               <p>오른쪽 공격을 담당하는 선수. 팀에서 가장 공격적 능력이 좋은 선수가 맡으며 수비에 가담하는 경우는 적고 대체로 공격에 치중하는 포지션이다. 레프트와 라이트를 합쳐 윙스파이커라고도 명한다.</p>
             </div>
-            <img src="../V_imges/라이트.png" alt="http://blog.naver.com/starsports2017/221096685771" data-scroll="toggle(.fromRightIn, .fromRightOut)">
+            <img src="../V_imges/Right.png" alt="http://blog.naver.com/starsports2017/221096685771" data-scroll="toggle(.fromRightIn, .fromRightOut)">
         </div>
         <hr>
         <div id="position_block">
-            <img src="../V_imges/센터위치.png" alt="http://blog.naver.com/starsports2017/221096685771" data-scroll="toggle(.fromLeftIn, .fromLeftOut)">
+            <img src="../V_imges/Center.png" alt="http://blog.naver.com/starsports2017/221096685771" data-scroll="toggle(.fromLeftIn, .fromLeftOut)">
             <div id="left_block" data-scroll="toggle(.fromRightIn, .fromRightOut)">
               <h2>Center</h2>
               <p>미들블로커라고 명하며 보통 중앙에 있기 때문에 아군 서브시 전위 블로커들을 지휘하며 상대 스파이크를 저지하는 역할을 하고, 중앙이라는 위치상 속공을 많이 하게 된다. 또한 블로킹 능력이 중요하기 때문에 다른 포지션들보다 키가 커야 한다. 키가 커서 블록 능력은 좋지만 리시브/디그 능력이 부족하기 때문에 후위에서는 상대적으로 역할이 적어 리베로가 교대될 때 주로 센터와 교대한다.</p>
@@ -93,11 +93,11 @@
               <h2>Setter</h2>
               <p>다른 선수들에게 토스로 공을 연결해주는 포지션. 토스의 정확도와 구질이 스파이크의 공격력을 절반 이상 결정하기 때문에 세터의 토스는 팀의 공격에 핵심적인 역할을 하며, 공격수들을 지휘하는 역할도 하게 된다.</p>
             </div>
-            <img src="../V_imges/세터위치.png" alt="http://blog.naver.com/starsports2017/221096685771" data-scroll="toggle(.fromRightIn, .fromRightOut)">
+            <img src="../V_imges/Setter.png" alt="http://blog.naver.com/starsports2017/221096685771" data-scroll="toggle(.fromRightIn, .fromRightOut)">
         </div>
         <hr>
         <div id="position_block">
-            <img src="../V_imges/리베로_위치.png" alt="http://blog.naver.com/starsports2017/221096685771" data-scroll="toggle(.fromLeftIn, .fromLeftOut)">
+            <img src="../V_imges/Libero.png" alt="http://blog.naver.com/starsports2017/221096685771" data-scroll="toggle(.fromLeftIn, .fromLeftOut)">
             <div id="left_block" data-scroll="toggle(.fromRightIn, .fromRightOut)">
               <h2>Libero</h2>
               <p>수비 전문 포지션. 1997년 FIVB 월드 리그부터 처음 도입 되었으며 코트 위에서는 1명만 경기할 수 있다. 또한 다른 선수들과 유니폼도 다르다. 수비는 가능하지만 공격은 금지된 포지션이며 보통 후위에 위치하고 있습니다. 선수교대의 제한 횟수에 자유롭다는 의미에서 리베로라고 이름이 붙었다. </p>
