--- a/V_html/V_Rule_Rotation.html
+++ b/V_html/V_Rule_Rotation.html
@@ -67,7 +67,7 @@
                 <div class="panel-body" id="Rule_outline_main">
                   <div id="Outline_block1">
                     <h1>Rotation</h1>
-                    <img src="../V_imges/로테이션.png" id="rotation_img">
+                    <img src="../V_imges/Rotation.png" id="rotation_img">
                     <p>서브 리시브를 받는 팀이 득점해 서브권을 얻게되면 득점한 팀만 시계 방향으로 한칸 씩 옮기는 것입니다. 즉 우리편이 서브를 넣는 차례에서 득점을 하게 됐을시에는 로테이션을 돌리지 않습니다. 
                         <br><br>어택 라인과 네트 사이에 3명이 있는 자리를 전위, 어택 라인과 엔드 라인 사이에 3명이 있는 자리를 후위라고 한다. 후위 선수는 전위 선수에게는 적용되지 않는 제약이 있는데, 바로 전위에서 공격을 할 수는 있으나 블로킹을 시도할 수 없으며 전위에 있을 때 네트 위쪽 끝보다 높이 올라가 있는 공을 건드리면 반칙이라는 것. 따라서 후위 선수가 백어택 중 어택 라인을 밟게 되면 공의 위치상 건드릴 수 없는 공을 건드린 셈이니 반칙이 되어 상대편이 점수를 얻는다.
                         <br><br>
